# converters

./: .gitignore  CMakeLists.txt  README.md  algorithms.hpp  convert_step_to_egads.c  deneme.ex  deneme_result.solb  gmf2of.cpp  of2gmf.cpp  openfoam_utility.cpp  openfoam_utility.hpp
